crates/ignis_analyzer/tests/snapshots/golden_err__static_on_enum_variant.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0067: Enum variant 'Red' cannot be declared static
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:25-28
