crates/ignis_analyzer/tests/snapshots/golden_err__test_assert_eq_rejects_unsupported_record_type.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0191: type 'NoEq' does not support builtin equality; expected a primitive, str, or Eq-implementing record/enum
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:313-346
[ERROR] A0018: Argument 1 type mismatch: expected 'T', got 'NoEq'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:334-338
[ERROR] A0018: Argument 2 type mismatch: expected 'T', got 'NoEq'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:340-345
