crates/ignis_analyzer/tests/snapshots/golden_err__test_attribute_rejects_invalid_signature_shape.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0111: @test functions cannot declare generic parameters in v0.5
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:16-38
[ERROR] A0111: @test functions must not take parameters in v0.5
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:16-38
[ERROR] A0111: @test functions must return void in v0.5
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:16-38
