crates/ignis_analyzer/tests/snapshots/golden_err__test_attribute_rejects_method_placement.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0117: unknown attribute '@test' on method
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:20-25
