crates/ignis_analyzer/tests/snapshots/golden_err__type_alias_cycle.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0066: Type alias 'A' creates a cycle
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:1-12
