crates/ignis_analyzer/tests/snapshots/golden_err__undeclared_identifier.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
assertion_line: 27
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] I0033: Undeclared variable 'unknown_var'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:42-53
[ERROR] I0033: Undeclared variable 'unknown_var'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:42-53
