crates/ignis_analyzer/tests/snapshots/golden_err__unknown_builtin_renders_unified_contract_diagnostic.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0110: Unknown builtin '@bogus'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:29-37
