crates/ignis_analyzer/tests/snapshots/golden_err__unknown_param_attribute_renders_unified_contract_diagnostic.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0117: unknown attribute '@bogus' on parameter
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:14-20
