crates/ignis_analyzer/tests/snapshots/golden_err__unreachable_code.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] A0025: Unreachable code detected
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:41-56
