crates/ignis_analyzer/tests/snapshots/golden_err__use_after_free_write.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] O0002: Use of freed value 'p'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:195-202
